[gd_scene load_steps=4 format=3 uid="uid://cw8hpbo21he2k"]

[ext_resource type="Script" path="res://Fish/TestEnemy.gd" id="1_getne"]
[ext_resource type="Texture2D" uid="uid://7rtf6xdtafx7" path="res://Fish/CreatureSprites/Bigrighted.png" id="2_kcon2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b8i8f"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 16
motion_mode = 1
script = ExtResource("1_getne")

[node name="PhysicalBody" type="CollisionShape2D" parent="."]
scale = Vector2(1.64, 1.64)
shape = SubResource("CircleShape2D_b8i8f")
disabled = true

[node name="AreaBody" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionBody" type="CollisionPolygon2D" parent="AreaBody"]
polygon = PackedVector2Array(-8, -19, 12, -19, 23, -11, 24, 14, 14, 22, -7, 22, -19, 14, -24, 3, -21, -8)

[node name="AreaMouth" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionMouth" type="CollisionPolygon2D" parent="AreaMouth"]
polygon = PackedVector2Array(24, -3, 40, -6, 40, 2, 24, 1)

[node name="AreaVision" type="Area2D" parent="."]
collision_layer = 32

[node name="CollisionVision" type="CollisionPolygon2D" parent="AreaVision"]
polygon = PackedVector2Array(22, -6, 120, -100, 150, -70, 170, -20, 170, 20, 150, 70, 120, 100, 22, 3)

[node name="EnemySprite" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_kcon2")

[node name="Node2D" type="Node2D" parent="."]

[node name="SizeLabel" type="Label" parent="Node2D"]
visible = false
offset_left = -40.0
offset_top = -42.0
offset_right = 40.0
offset_bottom = -16.0
text = "Size"
horizontal_alignment = 1

[node name="SizeDisplayDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[node name="EnemyFeedTime" type="Timer" parent="."]
one_shot = true

[node name="EnemyFleeTime" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="CheckForPlayerTime" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="AreaBody" to="." method="_on_area_body_area_entered"]
[connection signal="body_entered" from="AreaVision" to="." method="_on_area_vision_body_entered"]
[connection signal="body_exited" from="AreaVision" to="." method="_on_area_vision_body_exited"]
[connection signal="timeout" from="SizeDisplayDelay" to="." method="_on_size_display_delay_timeout"]
[connection signal="timeout" from="EnemyFeedTime" to="." method="_on_enemy_feed_time_timeout"]
[connection signal="timeout" from="EnemyFleeTime" to="." method="_on_enemy_flee_time_timeout"]
[connection signal="timeout" from="CheckForPlayerTime" to="." method="_on_check_for_player_time_timeout"]
